fixed overflow

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header h2 {
 
 @media (max-width: 500px) {
   .gallery {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
   }
 }
 
